# Langraph-Agent

./: .env.example  .gitignore  INSTRUCTION.md  README.md  pyproject.toml
agents/: __init__.py  chat.py  graph.py  state.py
agents/nodes/: __init__.py  generator.py  query_rewriter.py  response.py  retriever.py  validator.py
app/: main.py
app/pages/: chat.py  upload.py
common/: __init__.py  config.py
infrastructure/: Dockerfile  README.md  docker-compose.yml  start_server.py
infrastructure/DeepSeek-OCR-vllm/: config.py  deepseek_ocr.py  run_dpsk_ocr_eval_batch.py  run_dpsk_ocr_image.py  run_dpsk_ocr_pdf.py
infrastructure/DeepSeek-OCR-vllm/process/: image_process.py
ingestion/: __init__.py  cli.py  embeddings.py  pipeline.py
ingestion/ocr/: deepseek.py
ingestion/processor/: __init__.py  chunker.py  cleaner.py  image_extractor.py  pdf.py
ingestion/vectorstore/: __init__.py  chroma.py
src/agents/: pyproject.toml
src/agents/src/agents/: chat.py  state.py
src/agents/src/agents/nodes/: __init__.py  response.py  validator.py
src/app/: pyproject.toml
src/app/src/app/: __init__.py
src/common/: pyproject.toml
src/common/src/common/: config.py  logging.py
src/ingestion/: pyproject.toml
src/ingestion/src/ingestion/: pipeline.py
src/ingestion/src/ingestion/ocr/: __init__.py  base.py  deepseek.py
src/ingestion/src/ingestion/processor/: __init__.py  chunker.py  cleaner.py  pdf.py
src/ingestion/src/ingestion/vectorstore/: chroma.py
tests/test_agents/: test_state.py
tests/test_ingestion/: __init__.py  test_cleaner.py
