[project]
name = "agents"
version = "0.1.0"
description = "LangGraph RAG agents for document Q&A"
requires-python = ">=3.11"
dependencies = [
    "common",
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "chromadb>=0.5",
    "openai>=1.0",
]

[project.optional-dependencies]
observability = ["langfuse>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.uv.sources]
common = { workspace = true }
