[project]
name = "app"
version = "0.1.0"
description = "Streamlit web interface for RAG system"
requires-python = ">=3.11"
dependencies = [
    "common",
    "ingestion",
    "agents",
    "streamlit>=1.38",
]

[project.scripts]
rag-app = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.uv.sources]
common = { workspace = true }
ingestion = { workspace = true }
agents = { workspace = true }
