[project]
name = "common"
version = "0.1.0"
description = "Shared utilities for RAG system"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "structlog>=24.0",
    "orjson>=3.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/common"]
